<resources>
    <string name="app_name">Mix</string>

    <string name="behavior_fab">com.example.sphinx.mix.behavior.FooterBehavior</string>
    <string name="behavior_up_fab">com.example.sphinx.mix.behavior.ScaleUpShowBehavior</string>
    <string name="swipe_dismiss_behavior">android.support.design.widget.SwipeDismissBehavior</string>


    <string name="definition">自定义Behavior</string>
    <string name="back_top">回到顶部</string>
    <string name="coordinator">知乎联动</string>
    <string name="down_cover">底部覆盖</string>
    <string name="slide_delete">滑动删除</string>
    <string name="viewSwitcher">BottomSheetDialog切换</string>
    <string name="Dagger">Dagger 示例</string>
    <string name="Dagger2">Dagger2 示例</string>
    <string name="Auto">布局适配</string>
    <string name="hint">查询格式：2017-4-26</string>


    <string name="txt_label_conf_color">Color: %1s</string>
    <string name="txt_label_conf_size">Size: %1d</string>
    <string name="txt_label_conf_time">Time: %1s</string>
    <string name="txt_label_conf_date">Date: %1s</string>

    <string name="prefered_date_today">Today\n02</string>
    <string name="prefered_date_tomorrow">Tomorrow\n03</string>
    <string name="prefered_date_tuesday">Tuesday\n04</string>
    <string name="prefered_time_12">PM\n1–2</string>
    <string name="prefered_time_23">PM\n2–3</string>
    <string name="prefered_time_34">PM\n3–4</string>
    <string name="message_order_placed">Order placed</string>
    <string name="txt_conf_message">Thank you! you\'ll receive  your order soon!</string>

    <string name="label_prefered_date">Preferred date</string>
    <string name="label_prefered_time">Preferred time</string>
    <string name="label_date">Preferred date</string>
    <string name="label_time">Preferred time</string>
    <string name="title_activity_slanted">SlantedActivity</string>

</resources>
